force-app/main/default/objects/Opportunity/fields/Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date__c</fullName>
    <formula>ADDMONTHS(Lease_Start_Date__c, Lease_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>