force-app/main/default/objects/Opportunity/fields/Related_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Property</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>RelatedProperties</relationshipName>
    <type>Lookup</type>
</CustomField>