force-app/main/default/objects/Opportunity/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>