force-app/main/default/objects/Opportunity/recordTypes/Lease_Deal.recordType-meta.xml
<RecordType>
    <fullName>Lease_Deal</fullName>
    <active>true</active>
    <businessProcess>Lease Process</businessProcess>
    <description>Lease Deal</description>
    <label>Lease Deal</label>
</RecordType>