force-app/main/default/objects/Opportunity/recordTypes/Rental_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Rental_Agreement</fullName>
    <active>true</active>
    <businessProcess>Rent Process</businessProcess>
    <description>Rental Agreement</description>
    <label>Rental Agreement</label>
</RecordType>